# ADLM-2025-Data-Challenge

./: .gitignore  CONVERSION_README.md  PRD_Search_Frontend.md  README.md  convert_to_vespa_feed.py  extract_structured.py  fda_510k_extracted_20251024_173142.json  lab_sop_extracted_20251024_173248.json  package-lock.json  pdf2markdown.py  pull_request_template.md  pyproject.toml
frontend/: DESIGN-SYSTEM.md  README-CHAT.md  README.md  THEME-SYSTEM.md  index.html
frontend/css/: styles.css
frontend/js/: api.js  chat.js  config.js  main.js  sampleData.js  utils.js
rag-blueprint/: RAG_BLUEPRINT.md
rag-blueprint/app/: services.xml
rag-blueprint/app/schemas/: doc.sd
rag-blueprint/app/security/: clients.pem
rag-blueprint/dataset/: medical_docs.jsonl
